--- a/tidyverse_packages/forcats.Rmd
+++ b/tidyverse_packages/forcats.Rmd
@@ -2,204 +2,266 @@
 title: "Unpacking the Tidyverse - forcats"
 author: "Fisher Ankney"
 date: "September 2nd, 2018"
-output: html_document
+output: md_document
 ---
 
 <br> 
 
-load Library
+### Introduction 
+
+This is the seventh of eight installments in my *Unpacking the Tidyverse* series. Each installment focuses on one of the eight core packages in Hadley Wickham's tidyverse. Instructions given in each post are mainly derived from Hadley's textbook, [R for Data Science](http://r4ds.had.co.nz/), and CRAN package documentation. This installment of *Unpacking the Tidyverse* focuses on the categorical data manipulation package, forcats. The previous installment focuses on the stringr package, and can be found [here]({{ site.baseurl }}/r4ds/stringr). The next installment focuses on the purrr package, and can be found [here]({{ site.baseurl }}/r4ds/purr). 
+
+Categorical data can be tricky to understand and work with. Often, categorical data has factors, or levels; Factors are a way to organize categorical variables logically. For example, if you attempt to sort a list of months, they'll be sorted alphabetically (April, August, December, ...). But wouldn't it make more sense if they were sorted chronologically? Forcats aims to help you solve problems like this quickly and efficiently. 
+
+<br> 
+
+### Load Library
+
+Forcats is included in the 8 core tidyverse packages, so we can simply load the tidyverse library. 
 ```{r, message=F}
 library('tidyverse')
 ```
 
 <br> 
 
-Load Data
+### Load Data
+
+Let's get some categorical data to work with. After a quick search, I've found a satesfactory dataset from the University of California, Irvine's department of Information and Computer Science website. The dataset we'll be working with in this post can be found [here](https://archive.ics.uci.edu/ml/datasets/Adult).
+
 ```{r, eval=F, echo=T}
-# load data as dataframe from the url in its .csv form, insure no column names
+# load data as dataframe from the url in its .csv form, insure data isn't used as column names
 income_predict_data <- as_data_frame(read_csv(url("https://archive.ics.uci.edu/ml/machine-learning-databases/adult/adult.data"), col_names = F))
 
-# name columns
+# name columns as described in the dataset's information page
 colnames(income_predict_data) <- c("age", "workclass", "fnlwgt", "education", "education_num", "marital_status", "occupation", "relationship", "race", "sex", "capital_gains", "capital_loss", "hours_per_week", "native_country", "income_prediction")
 
-# save data incase source disappears
+# save the dataset just incase you go offline, or the source is removed
 write_csv(income_predict_data, "r4ds_tidyverse/tidyverse_packages/forcats_data.csv")
 ```
-
-<br>
-
 
 ```{r, echo=F}
 income_predict_data <- read_csv("forcats_data.csv")
 ```
 
 <br>
+
 ```{r}
-# view data
+# view dataset
 income_predict_data
 ```
 
-Data found [here](https://archive.ics.uci.edu/ml/datasets/Adult)
+<br> 
 
-Variables Described - 
-```
-age: continuous.
-
-workclass: Private, Self-emp-not-inc, Self-emp-inc, Federal-gov, Local-gov, State-gov, Without-pay, Never-worked.
-
-fnlwgt: continuous.
-
-education: Bachelors, Some-college, 11th, HS-grad, Prof-school, Assoc-acdm, Assoc-voc, 9th, 7th-8th, 12th, Masters, 1st-4th, 10th, Doctorate, 5th-6th, Preschool.
-
-education_num: continuous.
-
-marital-status: Married-civ-spouse, Divorced, Never-married, Separated, Widowed, Married-spouse-absent, Married-AF-spouse.
-
-occupation: Tech-support, Craft-repair, Other-service, Sales, Exec-managerial, Prof-specialty, Handlers-cleaners, Machine-op-inspct, Adm-clerical, Farming-fishing, Transport-moving, Priv-house-serv, Protective-serv, Armed-Forces.
-
-relationship: Wife, Own-child, Husband, Not-in-family, Other-relative, Unmarried.
-
-race: White, Asian-Pac-Islander, Amer-Indian-Eskimo, Other, Black.
-
-sex: Female, Male.
-
-capital_gain: continuous.
-
-capital_loss: continuous.
-
-hours-per_week: continuous.
-
-native_country: United-States, Cambodia, England, Puerto-Rico, Canada, Germany, Outlying-US(Guam-USVI-etc), India, Japan, Greece, South, China, Cuba, Iran, Honduras, Philippines, Italy, Poland, Jamaica, Vietnam, Mexico, Portugal, Ireland, France, Dominican-Republic, Laos, Ecuador, Taiwan, Haiti, Columbia, Hungary, Guatemala, Nicaragua, Scotland, Thailand, Yugoslavia, El-Salvador, Trinadad&Tobago, Peru, Hong, Holand-Netherlands.
-
-income_prediction: <=50k, >50k
-```
-
-Now let's learn some forcats!
+The dataset is a collection of over 32,000 observations and 15 variables. It contains census data from the 1990's and is apart of a study that attempts to guess an individual's income (>$50,000 or <\$50,000) based on the census data. We're only going to use a few variables (education, race, hours worked per week) to demonstrate the capabilities of various forcat functions. 
 
 
-Can view categorical data by using the count function (dplyr)
+<br>
+
+
+### Forcats
+
+Now that we've loaded forcats and the dataset, let's have a closer look at the dataset. It's hard to get a grip on variables and their possible values just by calling the entire dataset, so let's do a count of a specific variable. The function `count()` is from the dplyr package, which is automatically loaded as a part of the tidyverse. My post on dplyr can be found [here]({{site.baseurl}}/r4ds/dplyr). 
+
 ```{r}
+# call the dataset 'then'
 income_predict_data %>%
+# count number of occurrences of each element in the race variable
   count(race)
 ```
 
 <br> 
 
-Can view data by visualization (ggplot2)
-```{r}
-income_predict_data %>%
-  ggplot(aes(education)) + 
-  geom_bar()
+The dataset shows 5 categories of possible values for the race variable. Let's visualize a different variable's categories using ggplot2, which is another core tidyverse package. (tutorial [here]({{site.baseurl}}/r4ds/ggplot2))
 
+```{r}
+# call the dataset
+income_predict_data %>%
+# plot the dataset's variable 'education'
+  ggplot(aes(education)) + 
+# use a bar chart
+  geom_bar() +
+# adjust the theme and labels
+  theme_minimal() + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) + 
+  xlab("Highest Level of Education") + 
+  ylab("Number of Entries") + 
+  ggtitle("Education Variable Breakdown")
 ```
 
+<br>
 
-Education data is sorted alpha numerically, that doesn't make sense. give this factor some levels! 
+There are 16 different categories in this dataset's education variable. Because the categories in this variable can be ordered logically, it's a great candidate to test out our forcat functions on. 
 
-add levels to the education data because it's ordered categorical data (base R)
+First, I'll show you how to turn this character variable into a factor variable using base R. It's important to some forcat functions that your variable is a factor and not a list of strings. 
+
 ```{r}
-# view possible categories
+# view possible categories for education
 unique(income_predict_data$education)
 
-# order categories
+# order categories logically by hand
 education_levels <- c("Preschool", "1st-4th", "5th-6th", "7th-8th", "9th", "10th", "11th", "12th", "HS-grad", "Some-college", "Assoc-acdm", "Assoc-voc", "Bachelors", "Masters", "Prof-school", "Doctorate")
 
+# use base R factor function with defined levels to overwrite education variable
 income_predict_data$education <- factor(income_predict_data$education, levels=education_levels)
 
+# plot new education variable with ordered factors
 income_predict_data %>%
   ggplot(aes(education)) + 
-  geom_bar()
+  geom_bar() + 
+  theme_minimal() + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) + 
+  xlab("Highest Level of Education") + 
+  ylab("Number of Entries") + 
+  ggtitle("Ordered Education Variable Breakdown")
 ```
 
 <br> 
 
 That makes more sense. 
 
-how do we do that for a numeric factor?
+Now let's put the factors to use by visualizing the the average hours worked per week, as broken down by our factor variable, education. 
 ```{r}
-# view possible categories
-unique(income_predict_data$hours_per_week)
-
-# order categories
-sorted_hours <- sort(unique(income_predict_data$hours_per_week))
-
-sorted_hours 
-```
-
-```{r}
-# create average hours worked variable (by education level)
+# copy original dataset into new dataset, 'then'
 education_hours_summary <- income_predict_data %>%
+# group new dataset by education factored variable, 'then'
   group_by(education) %>%
-  summarise(
+# use dplyr's summarize function to...
+  summarize(
+# calculate the average hours worked (grouped by education factor)
     avg_hours_worked = mean(hours_per_week, na.rm = TRUE)
   )
 
-# plot average hours worked vs education level 
+# plot average hours worked per week as grouped by education
 ggplot(education_hours_summary) + 
   geom_point(aes(avg_hours_worked, education)) + 
-  theme_minimal()
+  theme_minimal() + 
+  xlab("Average Hours Worked Per Week") + 
+  ylab("Highest Level of Education") + 
+  ggtitle("Average Hours Worked per Week by Ordered Education")
 
 ```
 
-well lets try reordering them according to their average hours worked now using fct_reorder (forcats)
+<br> 
+
+Interesting plot, but let's start using forcats functions to manipulate the data. Say I want to re-order the education factor according to the newly calculated average hours worked per week. I'll use the forcat function `fct_reorder` to accomplish this. 
+
 ```{r}
+# take the previously created education_hours_summary dataset, 'then'
 education_hours_summary %>%
+# reorder the factor, education, by avg_hours_worked, 'then'
   mutate(education = fct_reorder(education, avg_hours_worked)) %>%
+# plot the newly ordered factor and avg_hours_worked
   ggplot(aes(avg_hours_worked, education)) + 
-  geom_point()
+  geom_point() + 
+  theme_minimal() + 
+  xlab("Average Hours Worked Per Week") + 
+  ylab("Highest Level of Education") + 
+  ggtitle("Ordered Average Hours Worked per Week by Education")
 ```
 
-easy peasy 
+Well that was easy. Now we can clearly see that those who have only completed schooling until the 11th grade work the least number of hours each week, and professional school graduates work the most hours per week, on average. 
 
-reorder the factor according to frequency fct_rev reverses order small to large
+<br>
+
+Let's use another forcats function `fct_infreq` to reorder the education factors according to their frequency of occurrence in the dataset. We'll also throw in the forcats function `fct_rev` to reverse the levels so they're in ascending order of occurrence.
+
 ```{r}
+# take the original dataset, 'then'
 income_predict_data %>%
+# change the education variable so that it's ordered by reverse frequency, 'then'
   mutate(education = education %>% fct_infreq() %>% fct_rev()) %>%
+# plot the new education variable
   ggplot(aes(education)) + 
-  geom_bar()
+  geom_bar() + 
+  theme_minimal() + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) + 
+  xlab("Highest Level of Education") + 
+  ylab("Number of Entries") + 
+  ggtitle("Ordered Education Variable Breakdown")
+  
 ```
 
-Dont like the name of the categories? factor recode
+<br>
+
+The most common level of completed education is clearly the high school graduate, and the least common level of completed education is the those who've never attended grade school. 
+
+<br> 
+
+But what if I dislike the names of my factors? Do I have to go in and change them by hand? No. Forcats has a function for that: `fct_recode`. 
+
 
 ```{r}
+# take the initial dataset, 'then'
 income_predict_data %>%
+# change the education variable, by recoding the education variable
   mutate(education = fct_recode(education, 
+# the new category "Associates" is made up of what used to be "Assoc-acdm"
          "Associates" = "Assoc-acdm",
+# the new category "Vocational" is made up of what used to be "Assoc-voc"
          "Vocational" = "Assoc-voc",
+# the new category "Professional" is made up of what used to be "Prof-school"
          "Professional" = "Prof-school"
+# complete this function, 'then'
          )) %>%
+# count the newly altered variable
   count(education)
 ```
 
+<br>
+
+What if these categories are too descriptive, and I want to lump some of them together? The function `fct_lump` (forcats) has you covered.  
 
 
-
-
-Don't like all those categories and want to lump some? a few choices
 
 ```{r}
 # lump the smallest groups together to other, num big groups = 5
+
+# take the original dataset, 'then'
 income_predict_data %>%
+# change the education variable by lumping the education variable into 5 largest categories + 'other', 'then'
   mutate(education = fct_lump(education, n = 5)) %>%
+# count the new variable
   count(education)
 ```
 
+<br>
+
+"But lumping the factor doesn't give me enough control!" - You. 
+
+"How about `fct_collapse` then?" - Me. 
 
 ```{r}
+# take the initial dataset, 'then'
 income_predict_data %>%
+# change the education variable using factor collapse on the education variable
   mutate(education = fct_collapse(education,
+# create a new factor, advanced_degree, made up of five old factors collapsed together
         advanced_degree = c("Assoc-acdm","Bachelors", "Masters",
                             "Doctorate", "Prof-school")
+# 'then'
   )) %>%
+# plot the new education variable 
   ggplot(aes(education)) + 
-  geom_bar()
+  geom_bar() + 
+  theme_minimal() + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) + 
+  xlab("Highest Level of Education") + 
+  ylab("Number of Entries") + 
+  ggtitle("Lumped Education Variable Breakdown")
 ```
 
-  or use factor recode to put multiple categories into a new category 
+<br> 
+
+Now you might be saying, "But Fisher, that was too easy! I want a harder, more verbose way to lump factors together!" To that, I present you again with `fct_recode`. 
+
 ```{r}
+# take the intitial dataset, 'then'
 income_predict_data %>%
-mutate(education = fct_recode(education,
+# change the education variable by recoding the factors of the education variable
+  mutate(education = fct_recode(education,
+# make a new factor, "drop_out", populate it with the old "Preeschool" factor
       "drop_out" = "Preschool",
+# repeat ad nauseam
       "drop_out" = "1st-4th",
       "drop_out" = "5th-6th",
       "drop_out" = "7th-8th", 
@@ -207,14 +269,29 @@ mutate(education = fct_recode(education,
       "drop_out" = "10th", 
       "drop_out" = "11th",
       "drop_out" = "12th")
+# THEN
       ) %>%
-ggplot(aes(education)) + 
-geom_bar()
+# plot the new education variable
+  ggplot(aes(education)) + 
+  geom_bar() + 
+    theme_minimal() + 
+    theme(axis.text.x = element_text(angle = 90, hjust = 1)) + 
+    xlab("Highest Level of Education") + 
+    ylab("Number of Entries") + 
+    ggtitle("Lumped Education Variable Breakdown")
   
 ```
 
-and that's the useful forcats!
+<br> 
 
-till next time, 
+And that does it for the fun and friendly forcats package. See, categorical data analysis can be fun! Next time I'll be finishing up my Unpacking the Tidyverse series with the purrr package. It should be a good one! 
 
-fisher
+Here's some additional resources on Forcats: <br> 
+- [Forcats Github Repo](https://github.com/tidyverse/forcats) <br> 
+- [Forcats Documentation](https://cran.r-project.org/web/packages/forcats/forcats.pdf) <br> 
+- [Factor Chapter of R4DS](http://r4ds.had.co.nz/factors.html) <br>
+- [Random Forcats Tutorial](http://stat545.com/block029_factors.html) <br> 
+
+
+Until next time, <br>
+\- Fisher
