--- a/tidyverse_packages/purr.Rmd
+++ b/tidyverse_packages/purr.Rmd
@@ -2,27 +2,32 @@
 title: "Unpacking the Tidyverse - purrr"
 author: "Fisher Ankney"
 date: "September 24, 2018"
-output: html_document
+output: md_document
 ---
 
 <br>
 
-This is the final installments in my *Unpacking the Tidyverse* series. Each of the eight posts focus on one of the core packages in Hadley Wickham's tidyverse. Instructions given in each post are mainly derived from Hadley's textbook, [R for Data Science](http://r4ds.had.co.nz/) and CRAN package documentation. This installment of *Unpacking the Tidyverse* focuses on iteration. We'll learn what for loops are, and how they work. Then we'll learn how to perform these same operations with purrr functions. The previous installment focuses on the categorical data manipulation package, [forcats]({{ site.baseurl }}/r4ds-forcats).
+This is the final installments in my *Unpacking the Tidyverse* series. It has been a pretty fun, and extremely rewarding journey, systematically work through the tidyverse. I've pored over the R4DS book, vignettes, GitHub repositories, blog posts, CRAN Documentation, and RStudio cheat sheets in order to better understand these eight very important packages. 
+
+This final installment of *Unpacking the Tidyverse* focuses on iteration. I cover why we need iteration, what for loops are, and how the purrr package can help us simplify these tasks. The previous installment of *Unpacking the Tidyverse* focuses on the categorical data manipulation package, [forcats]({{ site.baseurl }}/r4ds-forcats).
 
 To use purrr, we must first download the tidyverse. 
 
+<br> 
+
 ### Library
+
 ```{r, message=F}
 library('tidyverse')
 ```
 
 <br> 
 
-### Iteration By Hand
+### Iteration by Hand
 
-Iteration allows you to conduct the same operation on multiple inputs without tediously copying-and-pasting code. Here's a simple example of a for-loop.
+Iteration allows you to conduct the same operation on multiple inputs without tediously copying-and-pasting code. To illustrate the need for iteration, I'll set up a repetitive task and complete it by hand. Once we have a baseline of tediousness, I'll complete the same task using a for loop. After that, we'll move to the purrr package's `map` functions for maximum-awesome. 
 
-First we'll create a dataframe with 4 variables: a, b, c, and d. Each of these variables will contian 10 randomly generated numbers from the normal distribution using the function `rnorm`. 
+To illustrate the need for iteration, let's compute a simple summary statistic on a dataset. First we'll create a dataframe with 4 variables: a, b, c, and d. Each of these variables will contain 10 randomly generated numbers from the normal distribution using the function `rnorm`. 
 
 ```{r}
 df <- tibble(
@@ -37,14 +42,21 @@ df
 
 <br>
 
-Now let's try to compute the mean of each variable
+As you can see the numbers range from around negative 3 to positive 3, but are mostly populating -1 to 1. This is typical of the normal distribution, to see this distribution in action, check out my previous blog post [A Roll of the Dice]({{ site.baseurl }}/a-roll-of-the-dice). 
+
+Now to compute the mean of each of the variables a-d:
 ```{r error=T}
 mean(df)
 ```
 
 <br> 
 
-well that doesn't work. I guess we'll have to specify each variable. 
+Well that doesn't work...
+
+I guess we'll have to specify each variable. 
+
+<br> 
+
 ```{r}
 mean(df$a)
 mean(df$b)
@@ -54,9 +66,9 @@ mean(df$d)
 
 <br> 
 
-Imagine we have 100 variables that we want to calculate the mean of. That wouldn't be very fun. That's where for loops come in. 
+That's better. But imagine if we have 100 variables that we want to calculate the mean of... That would be awful! Good thing we have for loops to rescue us from all of this *work*. 
 
-<br.
+<br>
 
 ### For Loops
 
@@ -70,28 +82,33 @@ for (i in seq_along((df))) {
 
 # Step 3 
   output_vector[[i]] <- mean(df[[i]])
+
+# close for loop
 }
 
+# display results
 output_vector
 ```
 
 <br> 
 
-We've succefully created a for loop to iterate through the variables! Each for loop is broken down into three steps. 
+We've successfully created a for loop to iterate through the variables! It may seem like more work at first, and maybe it is for such a simple task as calculating the mean of 4 variables. But for loops are an integral programming technique and can be extremely useful. Even if you're a master at purrr. 
 
-The first step, you must create an output vector to store your results. It's easy to create an empty vector of the correct size using the `vector()` function. In the first arguement of `vector()` you specify what kind of vector to create. This could be specified as any of the data structures i.e. integer, logical, character, etc. The second argumenet of `vector()` is the length of the vector. Clever use of `ncol()`, `nrow()`, or `length()` will give you the proper length for your output vector. 
+Each for loop is broken down into three steps. 
+
+The first step, you must create an output vector to store your results. It's easy to create an empty vector of the correct size using the `vector()` function. In the first argument of `vector()` you specify what kind of vector to create. This could be specified as any of the data structures i.e. integer, logical, character, etc. The second argument of `vector()` is the length of the vector. Clever use of `ncol()`, `nrow()`, or `length()` will give you the proper length for your output vector. 
 
 The second step of a for loop is to define the sequence. Here we determine what to loop over using base R's `seq_along()` function. Create the variable `i` as a counter variable. 
 
 The third and most complicated step of creating a for loop is in the body of the sequence. Here we describe to R exactly what we want to do as we loop through our defined dataframe. Sometimes we simply want to take the mean of each variable, and store that number into our output vector. Other times we may want to insert a series of if then statements, of generate graphics of the data we're looping over. The possibilities are endless. 
 
-Let's take our iteration discussion to the third and final level. Purrr functions. 
+Great, so we've covered a iteration and a simple for loop. Now let's get to the good stuff. The reason you came here. The purrr package!
 
 <br> 
 
-### Purrr Functions
+### Purrr Map Function
 
-In our quest to find the mean of each of the four variables in `df`, can use the most basic purrr function `map()`. 
+In our quest to find the mean of each of the four variables in `df`, we can use the most basic purrr function `map()`. 
 
 ```{r}
 df %>% 
@@ -100,12 +117,14 @@ df %>%
 
 <br> 
 
-The function `map` takes two main arguements, a target to iterate over, and a function to apply during that iteration. `map` Returns a list of values, but if you don't want a generic list you can the varients of the `map` function. 
+The function `map` takes two main arguments, a target to iterate over, and a function to apply during that iteration. `map` Returns a list of values, but if you don't want a generic list you can the variants of the `map` function. 
 
 - `map_lgl()` returns a logical vector. 
 - `map_int()` returns an integer vector. 
 - `map_dbl()` returns a double vector. 
 - `map_chr()` returns a character vector.
+
+<br> 
 
 Here's what `map_dbl()` looks like when applied to our favorite iteration-situation. 
 
@@ -118,9 +137,9 @@ df %>%
 
 That's smooooth. 
 
-So let's make it more complex! How about we create our own function and test out the `map_chr` function. I want to run through a dataframe of arbitrary size, and return the words "positve", "negative", or "zero", if the elements are as such.
+So let's make it more complex! How about we create our own function and test out the `map_chr` function. I want to run through a dataframe of arbitrary size, and return the words "positive", "negative", or "zero", if the elements are as such. I want this to function to be done to every 
 
-First lets make the custom function!
+First things first, let's make the custom function!
 
 ```{r}
 # name the function 'classify_chr' with input = 'input'
@@ -162,7 +181,11 @@ print(output)
 <br>
 
 Alright. That function was relatively easy to create! Let's test it out. 
+
+<br> 
+
 ```{r}
+# test classify_chr function
 classify_chr(-1)
 classify_chr(0)
 classify_chr(1)
@@ -170,9 +193,12 @@ classify_chr(1)
 
 <br> 
 
-Single entries are working as expected. Let's give the custom function a concantenated list of numbers and see what it does. 
+Single entries are working as expected. Let's give the custom function a concatenated list of numbers and see what it does. 
+
+<br> 
 
 ```{r}
+# test classify_chr on a numeric vector
 a <- c(-1,0,1)
 
 classify_chr(a)
@@ -182,7 +208,10 @@ classify_chr(a)
 
 Looking good, how about we step it up to the final level of complexity! Running through a tibble that has lists of numbers as it's variables.
 
+<br> 
+
 ```{r error=T}
+# test classify_chr on a tibble
 test_tib <- tibble(
   a = sample(-10:10,10, replace = T),
   b = sample(1:10,10, replace = T),
@@ -191,15 +220,17 @@ test_tib <- tibble(
 
 test_tib
 
-
 classify(test_tib)
 ```
 
 <br> 
 
-An Error! Oh no! Wait, that's exactly why we went through all of this. Thats where purrr comes in! Let's give it a shot.
+An Error! Oh no! Wait, that's exactly why we went through all of this. That’s where purrr comes in! Let's give it a shot.
+
+<br> 
 
 ```{r}
+# use map_chr to apply custom function to a tibble
 test_tib %>%
   map_chr(classify_chr)
 ```
@@ -208,28 +239,70 @@ test_tib %>%
 
 Alright! Not the prettiest of outputs, but it does what it's designed to do. And it's a great illustration of when we need to use the map function. 
 
+<br> 
 
-#### mapping over multiple arguements 
-```
-mu <- list(5, 10, -3)
+### Purrr map2 & pmap Function
 
-mu %>%
-  map(rnorm, n=5)
-```
+When we want to map over two arguments in our function, we can use the map2 function. Say you want to generate a random number from the normal distribution with a specific mean and standard deviation. 
 
-#### mapping over two vectors in parallel
+Using the `rnorm` function, you could do something like this.
 
-
-```
-mu  <- list(5,10,-3)
-sigma <- list(1,5,10)
-
-map2_dbl(mu, sigma, rnorm, n=5)
-
+```{r}
+rnorm(10, 5, n = 1)
 ```
 
+<br>
 
-```
-pmap{}
+There we've taken number from the normal curve with mean (mu) 10, and standard deviation (sigma) 5. now say we want to do this 5 times each with 10 different inputs. Instead of writing 50 `rnorm` statements, `Map2` can help us out. 
 
+<br>
+
+```{r}
+# create a variety of mean inputs 
+mu <- rep(20:24, 2)
+
+# create a variety of standard devation inputs
+sigma <- sample(1:5, size = 10, replace = T)
+
+# check the inputs
+mu
+sigma
+
+# apply mu and sigma inputs to the rnorm function,
+# produce 5 outputs for each pair of input arguments
+map2(mu, sigma, rnorm, n=5)
 ```
+
+<br>
+
+It's easy to see how you could want 3 arguments, or 4 or 5. For the generalized case, of **p** inputs, we use the `pmap` function in much the same way we would use map2. 
+
+
+As a final example, we want to again use the `rnorm` function to choose a number from the normal distribution with a set mean and standard deviation. this time, we also want to vary the number of outputs the function returns by changing the `n =` argument in `rnorm`. 3 varied arguements is the job for `pmap`. 
+
+```{r}
+outs <- c(10,15,20)
+mu <- c(5,6,7)
+sigma <- c(1,2,3)
+
+
+arguments <- list(outs, mu, sigma)
+
+arguments %>%
+  pmap(rnorm)
+```
+
+<br> 
+
+### Conclusions
+
+And that does it! That's my run down of the most important purrr concepts and functions. That also completes my eight-part series on the core tidyverse packages. 
+
+I highly suggest you read the book [r4ds](http://r4ds.had.co.nz/) written by Hadley Wickham and Garrett Grolemund. It'll change your life! Maybe.
+
+Anyways, as always, 
+
+<br> 
+
+Until next time, <br> 
+\- Fisher
